--- a/themes/hugo-cards/layouts/partials/footer.html
+++ b/themes/hugo-cards/layouts/partials/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row p20">
             {{ with .Site.Params.copyright }}
-                <div class="col-md-4 text-center mt25">All rights reserved by <a target="_blank" href="{{ .link }}">{{ .name }}</a></div>
+                <div class="col-md-4 text-center mt25">Design based on Hugo-Cards by <a target="_blank" href="{{ .link }}">{{ .name }}</a></div>
             {{ end }}
 
             <div class="col-md-4 text-center mt25" >
