--- a/themes/hugo-cards/layouts/partials/sidebar.html
+++ b/themes/hugo-cards/layouts/partials/sidebar.html
@@ -9,7 +9,7 @@
             
         
         <div class="mt10 recent">
-            <h2>Recent articles</h2>        
+            <h2>Recent Asssessments</h2>        
              <ul>
                 {{ range first 3 (where .Site.RegularPages "Section" "posts") }}
 
