Added small bear

--- a/themes/hugo-cards/layouts/_default/list.html
+++ b/themes/hugo-cards/layouts/_default/list.html
@@ -1,7 +1,8 @@
 {{ define "main" }}
 
 <div class="home">
- 
+<p>Quantitative Biology Education Assessment Resources (QBEAR) is a repository of assessment instruments that exist for measuring the quantitative ability and reasoning of biology students.</p>
+<br />
   
     <div class="row pack">
 
