--- a/themes/hugo-cards/layouts/partials/header.html
+++ b/themes/hugo-cards/layouts/partials/header.html
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <img width="40" src="{{ .Site.BaseURL }}images/{{ .Site.Params.defaultImage }}" alt="Q. Bear" style="vertical-align: text-bottom; margin-right:-20px;"><a class="navbar-brand" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
+      <img width="40" src="{{ .Site.BaseURL }}images/{{ .Site.Params.defaultImage }}" alt="Q. Bear" style="vertical-align: text-bottom; margin-right:-20px; margin-left:60px;"><a class="navbar-brand" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
