Removed dates, alphabatized assessments, ditch plainify

--- a/themes/hugo-cards/layouts/_default/list.html
+++ b/themes/hugo-cards/layouts/_default/list.html
@@ -19,11 +19,11 @@
                   {{ end }}
                   
                   <div class="panel-body">
-                    <h3 class="panel-title pull-left">{{ .Title | truncate 25 }}</h3><span class="post-meta pull-right"><small>{{ .Date.Format "January 2, 2006" }}</small></span>
+                    <h3 class="panel-title pull-left">{{ .Title | truncate 25 }}</h3><span class="post-meta pull-right"><!--<small>{{ .Date.Format "January 2, 2006" }}</small>--></span>
                   </div>
                   
                   <div class="panel-body"><small>
-                    {{ .Summary | plainify | truncate 180 }}</small>
+                    {{ .Summary  | truncate 180 }}</small>
                   </div>
                 </div>
                 </a>
