--- a/themes/hugo-cards/layouts/partials/sidebar.html
+++ b/themes/hugo-cards/layouts/partials/sidebar.html
@@ -9,7 +9,7 @@
             
         
         <div class="mt10 recent">
-            <h2>Recent Asssessments</h2>        
+            <!--<h2>Recent Asssessments</h2>        
              <ul>
                 {{ range first 3 (where .Site.RegularPages "Section" "posts") }}
 
@@ -18,7 +18,7 @@
                       </li>
 
                 {{ end }}
-              </ul>
+              </ul>-->
         </div>
         {{ if .Site.Params.fbLikeBox }}
         <div class="mt10">
